style.css
/* ... */
.adjacent-entry-pagination {
	margin-bottom: 0;
}

.archive-pagination li {
	display: inline;
}

.archive-pagination li a {
	background-color: #333;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	font-size: 16px;
	padding: 8px 12px;
}

.archive-pagination li a:hover,
.archive-pagination li a:focus,
.archive-pagination .active a {
	background-color: #c3251d;
}

/*  Comments
--------------------------------------------- */

.comment-respond,
.entry-comments,
.entry-pings {
	background-color: #fff;
	margin-bottom: 40px;
}

.comment-respond,
.entry-pings {
	padding: 40px 40px 16px;
}

.entry-comments {
	padding: 40px;
}

.comment-header {
	font-size: 16px;
}

li.comment {
	background-color: #f5f5f5;
	border: 2px solid #fff;
	border-right: 0;
}

.comment-content {
	clear: both;
	word-wrap: break-word;
}

.comment-list li {
	margin-top: 24px;
	padding: 32px;
}

.comment-list li li {
	margin-right: -32px;
}

.comment-respond label {
	display: block;
	margin-right: 12px;
}

.entry-comments .comment-author {
	margin-bottom: 0;
}

.entry-pings .reply {
	display: none;
}

.form-allowed-tags {
	background-color: #f5f5f5;
	font-size: 16px;
	padding: 24px;
}


/* Sidebars
---------------------------------------------------------------------------------------------------- */

.sidebar {
	font-size: 16px;
}

.sidebar li {
	border-bottom: 1px dotted #ddd;
	margin-bottom: 10px;
	padding-bottom: 10px;
}

.sidebar p:last-child,
.sidebar ul > li:last-child {
	margin-bottom: 0;
}

.sidebar .widget {
	background-color: #fff;
	margin-bottom: 40px;
}


/* Footer Widgets
---------------------------------------------------------------------------------------------------- */


.footerwidgetheader-container .widget-title {
	text-align: center;
	font-size: 30px;
	margin: 20px auto;
}

.footer-widgets {
	background-color: #333;
	clear: both;
	padding: 2% 0;
	text-align: center;
}

.footer-widgets,
.footer-widgets a {
	color: #999;
}

.footer-widgets input {
	border: 1px solid #333;
}

.footer-widgets a.button,
.footer-widgets a:hover,
.footer-widgets a:focus {
	color: #fff;
}

.footer-widgets li {
	border-bottom: 1px dotted #666;
	margin-bottom: 10px;
	padding-bottom: 10px;
}

.footer-widgets .widget {
	margin-bottom: 60px;
}

.footer-widgets p:last-child {
	margin-bottom: 0;
}




/* Site Footer
---------------------------------------------------------------------------------------------------- */

.site-footer {
	background-color: #fff;
	font-size: 14px;
	line-height: 1;
	padding: 15px 0;
	text-align: center;
}

.site-footer p {
	margin-bottom: 0;
}
.postfooterright .textwidget,
.postfooterleft .textwidget {
	text-align: center;
	padding: 1%;
}


/*
Beaver Builder Full Width
---------------------------------------------------------------------------------------------------- */


.fl-builder .site-inner .wrap {
	padding: 0;
}

.fl-builder .breadcrumb,
.fl-builder .entry-header {
	display: none;
}


@media only screen and (min-width: 768px) {
	.fl-builder .site-inner {
		padding: 0;
		border-top: none;
	}

	.fl-builder .site-inner .wrap {
		max-width: none;
	}

	.fl-builder .entry {
		padding: 0;
		margin-bottom: 0;
		border-top: none;
	}

}
/* ... */

